--- a/wishlist/templates/wishlist.html
+++ b/wishlist/templates/wishlist.html
@@ -19,5 +19,8 @@
     </tr>
 {% endfor %}
 </table>
-
+<h5>Sesi terakhir login: {{last_login}}</h5>
+<button>
+    <a href="{% url 'wishlist:logout' %}">Logout</a>
+</button>
 {% endblock content %}
